css styling added

--- a/index.html
+++ b/index.html
@@ -10,66 +10,110 @@
   </head>
   <body>
     <section class="header">
-      <div class="icon-header-left">
-        <img src="images/list-menu.svg" alt="nav-icon">
+      <div class="header-left">
+        <img class="icon" src="images/list-menu.svg" alt="nav-icon">
       </div>
-      <div class="header-text">
-        <h1>Harry Potter Battles</h1>
+      <div class="header-title">
+        <h1>Harry Potter Main Players</h1>
       </div>
-      <div class="icon-header-right">
-        <img src="images/backward-arrows.svg" alt="arrow-icon">
-        <img src="images/add-to-cart.svg" alt="add-to-cart-icon">
-      </div>
-    </section>
-    <section class="nav">
-      <div class="icon-section">
-        <div>
-          <img src="images/idea-symbol.svg">
-        </div>
-        <div>
-          <img src="images/incoming-call.svg">
-        </div>
-        <div>
-          <img src="images/love-heart.svg">
-        </div>
-        <div>
-          <img src="images/kitchen-funnel.svg">
-        </div>
-        <div>
-         <img src="images/mute-symbol.svg">
-        </div>
-        <div>
-         <img src="images/newtablet.svg">
-        </div>
-        <div>
-         <img src="images/open-laptop.svg">
-        </div>
-        <div>
-         <img src="images/puzzle-part.svg">
-        </div>
-        <div>
-         <img src="images/printer-tool.svg">
-        </div>
+      <div class="header-right">
+        <img class="icon" src="images/add-phone-call.svg" alt="arrow-icon">
+        <img class="icon" src="images/add-to-cart.svg" alt="add-to-cart-icon">
       </div>
     </section>
-    <!-- <div class= "header-text">
+      <div class="icon-bar">
+        <div>
+          <img class="icon" src="images/idea-symbol.svg">
+        </div>
+        <div>
+          <img class="icon" src="images/incoming-call.svg">
+        </div>
+        <div>
+          <img class="icon"src="images/love-heart.svg">
+        </div>
+        <div>
+          <img class="icon" src="images/kitchen-funnel.svg">
+        </div>
+        <div>
+         <img class="icon" src="images/mute-symbol.svg">
+        </div>
+        <div>
+         <img class="icon"src="images/newtablet.svg">
+        </div>
+        <div>
+         <img class="icon" src="images/open-laptop.svg">
+        </div>
+        <div>
+         <img class="icon" src="images/puzzle-part.svg">
+        </div>
+        <div>
+         <img class="icon" src="images/printer-tool.svg">
+        </div>
+      </div>
+    <div class= "statistics">
       <p>STATISTICS</p>
+    </div>
+    <div class="sponsor">
       <p>Presented by Gringott's Wizarding Bank</p>
-    </div> -->
-    <!-- <section class="hero-section">
-      <article class=>
-        <div class="harry box"></div>
-      </article>
-      <article class=>
-        <div class="hermione box"></div>
-      </article>
-      <article class=>
-      <div class="bellatrix box"></div>
-      </article>
-      <article>
-      <div class="malfoy box"></div>
-      </article>
-    </section>
+    </div>
+    <div class="boxes">
+      <div class="harry box">
+        <div class="headline">Hero</div>
+        <div class="summary">
+          <div class="character-image-column">
+            <div class="character-image"></div>
+          </div>
+          <div class="stats">
+            <h1 class="number">100</h1>
+            <p>The boy who lived</p></div>
+        </div>
+        <hr>
+        <div class="footer-box">Harry Potter</div>
+      </div>
+      <div class="hermione box">
+        <div class="headline">Booksmart Teammate</div>
+        <div class="summary">
+          <div class="character-image-column">
+            <div class="character-image"></div>
+          </div>
+          <div class="stats">
+            <h1 class="number">100</h1>
+            <p>A very clever witch</p></div>
+        </div>
+        <hr>
+        <div class="footer-box">Hermione Granger</div>
+      </div>
+      <div class="voldemort box">
+        <div class="headline">Public Enemy #1</div>
+        <div class="summary">
+          <div class="character-image-column">
+            <div class="character-image"></div>
+          </div>
+          <div class="stats">
+            <h1 class="number">-100000000</h1>
+            <p>He who shall not be named</p></div>
+        </div>
+        <hr>
+        <div class="footer-box">Voldemort</div>
+      </div>
+
+      <div class="ron box">
+        <div class="headline">Comic Relief</div>
+        <div class="summary">
+          <div class="character-image-column">
+            <div class="character-image"></div>
+          </div>
+          <div class="stats">
+            <h1 class="number">100</h1>
+            <p>Super Ginger Mother Fucker</p></div>
+        </div>
+        <hr>
+        <div class="footer-box">Ron Weasley</div>
+
+
+
+      </div>
+  </div>
     <section class="footer"></section>
   </body>
-</html> -->
+</html>
