--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
     </section>
       <div class="icon-bar">
         <div>
-          <img class="icon" src="images/idea-symbol.svg">
+          <img class="icon" src="images/idea-symbol.svg" alt="idea-symbol">
         </div>
         <div>
-          <img class="icon" src="images/incoming-call.svg">
+          <img class="icon" src="images/incoming-call.svg" alt="incoming-symbol">
         </div>
         <div>
-          <img class="icon"src="images/love-heart.svg">
+          <img class="icon"src="images/love-heart.svg" alt="love-symbol">
         </div>
         <div>
-          <img class="icon" src="images/kitchen-funnel.svg">
+          <img class="icon" src="images/kitchen-funnel.svg" alt="kitchen-symbol">
         </div>
         <div>
-         <img class="icon" src="images/mute-symbol.svg">
+         <img class="icon" src="images/mute-symbol.svg" alt="mute-symbol">
         </div>
         <div>
-         <img class="icon"src="images/newtablet.svg">
+         <img class="icon"src="images/newtablet.svg" alt="tablet-symbol">
         </div>
         <div>
-         <img class="icon" src="images/open-laptop.svg">
+         <img class="icon" src="images/open-laptop.svg" alt="laptop-symbol">
         </div>
         <div>
-         <img class="icon" src="images/puzzle-part.svg">
+         <img class="icon" src="images/puzzle-part.svg" alt="puzzle-symbol">
         </div>
         <div>
-         <img class="icon" src="images/printer-tool.svg">
+         <img class="icon" src="images/printer-tool.svg" alt="printer-symbol">
         </div>
       </div>
     <div class= "statistics">
